# mlops-2025

./: .gitignore  main.py  pyproject.toml  questions.txt
models/: model.pkl
scripts/: evaluate.py  featurize.py  pipeline.py  predict.py  preprocess.py  train.py
src/mlops_2025/features/: base_features_computer.py  features_computer.py
src/mlops_2025/model/: base_model.py  model.py
src/mlops_2025/preprocessing/: base_preprocessor.py  preprocessor.py
