[project]
name = "mlops_2025"
version = "0.1.0"
description = "MLOps Lab package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[tool.uv]
package = true

[tool.uv.sources]
mlops_2025 = { path = "src/mlops_2025" }

[tool.setuptools.packages.find]
where = ["src"]